Fixed input validation, fixex z-index bugs, added home link to menu and logo

--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,7 @@ body{
    display: flex;
    align-items: center;
    justify-content: space-between;
+   z-index: 3;
 }
 .menu{
    background-color: rgba(27, 152, 224, 0.95);
